nx-libs (2:3.5.0.25-0x2go1) UNRELEASED; urgency=low

  * Add 606_nx-X11_build-on-aarch64.full.patch. Build on aarch64
    architectures. (Fixes: #490).
  * Add 027_nxcomp_abstract-X11-socket.patch. In proxy mode "server" let
    NX proxy attempt connecting to the abstract X11 socket first, and only
    fallback to the file system socket, if the abstract socket is not
    available. (Fixes: #505).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 07 May 2014 09:58:10 +0200

nx-libs (2:3.5.0.24-0x2go1) unstable; urgency=low

  * Clean up debian/patches/series: Remove commented out patches.
  * Make sure, patch 056_nx-X11-Werror-format-security.full.patch gets
    included into rolled tarball (by renaming *.patch to *.full.patch).
  * Update 320_nxagent_configurable-keystrokes.full.patch: The keystrokes config
    file's default name now is keystrokes.cfg (plural).
  * Configurable keystrokes: Don't ignore first XML element in keystrokes.cfg
    anymore. (Fixes: #488).
  * debian/control:
    + Fix: nx-libs source: not-binnmuable-all-depends-any x2goagent -> nxagent.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 07 May 2014 09:55:48 +0200

nx-libs (2:3.5.0.23-0x2go1) unstable; urgency=low

  [ Orion Poplawski ]
  * Add patch: 054_nx-X11_ppc64-ftbfs.full.patch. Fix FTBFS on ppc64
    architecture. (Fixes: #411).
  * Add patch: 055_nx-X11_imake-Werror-format-security.full.patch. Fix FTBFS
    of imake on current Fedora rawhide (21) which uses the compiler option
    -Werror=format-security for all builds. (Fixes: #412).
  * Add patch: 056_nx-X11-Werror-format-security.patch. Fix more
    -Werror=format-security errors that only show up on ARM builds. (Fixes:
    #423).
  * nx-libs.spec:
    - Sync nx-libs.spec in Fedora with upstream's nx-libs.spec file. (Fixes:
      #393).

  [ Mike Gabriel ]
  * debian/control:
    + Build our imake against x11proto-core-dev headers.
  * nx-libs.spec:
    + Build our imake against xorg-x11-proto-devel.
